--- a/index.html
+++ b/index.html
@@ -4,82 +4,93 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paweł Koptewicz - usługi leśne</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="nav-container">
       <div class="logo">Paweł Koptewicz</div>
-      <nav>
-        <ul>
-          <li>Usługi</li>
-          <li>O nas</li>
-          <li>Kontakt</li>
+      <nav class="menu">
+        <ul class="menu__list">
+          <li><a href="#services">Usługi</a></li>
+          <li><a href="#about">O nas</a></li>
+          <li><a href="#contact">Kontakt</a></li>
         </ul>
       </nav>
     </div>
     <header>
       <h1>Kompleksowe usługi leśne na każdą kieszeń</h1>
     </header>
-    <section class="services">
-      <h2>Nasze usługi</h2>
-      <article class="service">
-        <h3>Pozyskanie drewna</h3>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio
-          reiciendis fuga tempora mollitia aliquam rem amet obcaecati voluptates
-          consequatur exercitationem odit veritatis nam, eveniet molestias
-          debitis architecto aspernatur vero. Cumque.
-        </p>
-      </article>
-      <article class="service">
-        <h3>Zrywka drewna</h3>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati
-          magnam aperiam modi, ab cupiditate quidem accusantium facilis iure
-          eveniet dolores!
-        </p>
-      </article>
-      <article class="service">
-        <h3>Zagospodarowanie lasu</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-          sapiente enim, facilis vel cum culpa quo natus, fuga et eveniet fugit.
-          Temporibus ut molestias laborum facilis eligendi beatae illum vel,
-          error est itaque eveniet aperiam labore nesciunt vero tenetur ipsum
-          fuga distinctio at laboriosam consequuntur impedit amet, nostrum
-          laudantium officia!
-        </p>
-      </article>
-      <article class="service">
-        <h3>Ochrona upraw leśnych</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, a.
-        </p>
-      </article>
-    </section>
-    <section class="about">
-      <div>
-        <h2>O nas</h2>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem,
-          molestias suscipit tempore saepe, in veniam sed modi beatae facilis
-          fuga aperiam recusandae alias amet, libero praesentium aut repellat
-          blanditiis a voluptas itaque aliquid! Quaerat, earum illum. Ipsa ea
-          exercitationem quos a sequi natus maxime quidem itaque, alias
-          perferendis iusto voluptatibus eum fugit sunt et nostrum repellendus
-          officia esse suscipit laboriosam vitae. Voluptate porro obcaecati a
-          maiores aperiam odio beatae. Debitis minima exercitationem sequi ut
-          voluptatibus animi totam repudiandae aliquid reiciendis, eligendi
-          sapiente vel excepturi voluptatum. Voluptatem, sapiente reprehenderit,
-          voluptas error nisi et dolore incidunt hic debitis delectus rem
-          possimus non.
-        </p>
-      </div>
-      <img src="images/harvester-min.jpg" alt="Harvester tnący drzewo" />
-    </section>
-    <footer>
-      <span>Nr telefonu: 609 138 878</span>
-      <span>Adres email: pkoptewicz@gmail.com</span>
+    <div class="wrapper">
+      <section id="services" class="services flow-content">
+        <h2>Nasze usługi</h2>
+        <article class="service">
+          <h3>Pozyskanie drewna</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio
+            reiciendis fuga tempora mollitia aliquam rem amet obcaecati
+            voluptates consequatur exercitationem odit veritatis nam, eveniet
+            molestias debitis architecto aspernatur vero. Cumque.
+          </p>
+          <div class="slice"><img src="" alt="" /></div>
+        </article>
+        <article class="service">
+          <h3>Zrywka drewna</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati
+            magnam aperiam modi, ab cupiditate quidem accusantium facilis iure
+            eveniet dolores!
+          </p>
+          <div class="slice"><img src="" alt="" /></div>
+        </article>
+        <article class="service">
+          <h3>Zagospodarowanie lasu</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+            sapiente enim, facilis vel cum culpa quo natus, fuga et eveniet
+            fugit. Temporibus ut molestias laborum facilis eligendi beatae illum
+            vel, error est itaque eveniet aperiam labore nesciunt vero tenetur
+            ipsum fuga distinctio at laboriosam consequuntur impedit amet,
+            nostrum laudantium officia!
+          </p>
+          <div class="slice"><img src="" alt="" /></div>
+        </article>
+        <article class="service">
+          <h3>Ochrona upraw leśnych</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, a.
+          </p>
+          <div class="slice"></div>
+        </article>
+      </section>
+      <section id="about" class="about flow-content">
+        <div>
+          <h2>O nas</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Voluptatem, molestias suscipit tempore saepe, in veniam sed modi
+            beatae facilis fuga aperiam recusandae alias amet, libero
+            praesentium aut repellat blanditiis a voluptas itaque aliquid!
+            Quaerat, earum illum. Ipsa ea exercitationem quos a sequi natus
+            maxime quidem itaque, alias perferendis iusto voluptatibus eum fugit
+            sunt et nostrum repellendus officia esse suscipit laboriosam vitae.
+            Voluptate porro obcaecati a maiores aperiam odio beatae. Debitis
+            minima exercitationem sequi ut voluptatibus animi totam repudiandae
+            aliquid reiciendis, eligendi sapiente vel excepturi voluptatum.
+            Voluptatem, sapiente reprehenderit, voluptas error nisi et dolore
+            incidunt hic debitis delectus rem possimus non.
+          </p>
+        </div>
+        <img src="images/harvester-min.jpg" alt="Harvester tnący drzewo" />
+      </section>
+    </div>
+    <footer id="contact">
+      <p><span>Nr telefonu:</span> 609 138 878</p>
+      <p><span>Email:</span> pkoptewicz@gmail.com</p>
     </footer>
     <script src="main.js"></script>
   </body>
