add and style icons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             voluptates consequatur exercitationem odit veritatis nam, eveniet
             molestias debitis architecto aspernatur vero. Cumque.
           </p>
-          <div class="slice"><img src="" alt="" /></div>
+          <div class="slice"><img src="./images/noun_Chainsaw_1265254.svg" alt="" /></div>
         </article>
         <article class="service">
           <h3>Zrywka drewna</h3>
@@ -45,7 +45,7 @@
             magnam aperiam modi, ab cupiditate quidem accusantium facilis iure
             eveniet dolores!
           </p>
-          <div class="slice"><img src="" alt="" /></div>
+          <div class="slice"><img src="./images/noun_tractor trailer_164432.svg" alt="" /></div>
         </article>
         <article class="service">
           <h3>Zagospodarowanie lasu</h3>
@@ -57,14 +57,14 @@
             ipsum fuga distinctio at laboriosam consequuntur impedit amet,
             nostrum laudantium officia!
           </p>
-          <div class="slice"><img src="" alt="" /></div>
+          <div class="slice"><img src="./images/noun_forest_867264.svg" alt="" /></div>
         </article>
         <article class="service">
           <h3>Ochrona upraw leśnych</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, a.
           </p>
-          <div class="slice"></div>
+          <div class="slice"><img src="./images/noun_Fence_2483850.svg" alt="" /></div>
         </article>
       </section>
       <section id="about" class="about flow-content">
