style services card

--- a/index.html
+++ b/index.html
@@ -28,44 +28,55 @@
     <div class="wrapper">
       <section id="services" class="services flow-content">
         <h2>Nasze usługi</h2>
-        <article class="service">
-          <h3>Pozyskanie drewna</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio
-            reiciendis fuga tempora mollitia aliquam rem amet obcaecati
-            voluptates consequatur exercitationem odit veritatis nam, eveniet
-            molestias debitis architecto aspernatur vero. Cumque.
-          </p>
-          <div class="slice"><img src="./images/noun_Chainsaw_1265254.svg" alt="" /></div>
-        </article>
-        <article class="service">
-          <h3>Zrywka drewna</h3>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati
-            magnam aperiam modi, ab cupiditate quidem accusantium facilis iure
-            eveniet dolores!
-          </p>
-          <div class="slice"><img src="./images/noun_tractor trailer_164432.svg" alt="" /></div>
-        </article>
-        <article class="service">
-          <h3>Zagospodarowanie lasu</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-            sapiente enim, facilis vel cum culpa quo natus, fuga et eveniet
-            fugit. Temporibus ut molestias laborum facilis eligendi beatae illum
-            vel, error est itaque eveniet aperiam labore nesciunt vero tenetur
-            ipsum fuga distinctio at laboriosam consequuntur impedit amet,
-            nostrum laudantium officia!
-          </p>
-          <div class="slice"><img src="./images/noun_forest_867264.svg" alt="" /></div>
-        </article>
-        <article class="service">
-          <h3>Ochrona upraw leśnych</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, a.
-          </p>
-          <div class="slice"><img src="./images/noun_Fence_2483850.svg" alt="" /></div>
-        </article>
+        <div class="services-wrapper">
+          <article class="service">
+            <h3>Pozyskanie drewna</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio
+              reiciendis fuga tempora mollitia aliquam rem amet obcaecati
+              voluptates consequatur exercitationem odit veritatis nam, eveniet
+              molestias debitis architecto aspernatur vero. Cumque.
+            </p>
+            <div class="slice">
+              <img src="./images/noun_Chainsaw_1265254.svg" alt="" />
+            </div>
+          </article>
+          <article class="service">
+            <h3>Zrywka drewna</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Obcaecati magnam aperiam modi, ab cupiditate quidem accusantium
+              facilis iure eveniet dolores!
+            </p>
+            <div class="slice">
+              <img src="./images/noun_tractor trailer_164432.svg" alt="" />
+            </div>
+          </article>
+          <article class="service">
+            <h3>Zagospodarowanie lasu</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+              sapiente enim, facilis vel cum culpa quo natus, fuga et eveniet
+              fugit. Temporibus ut molestias laborum facilis eligendi beatae
+              illum vel, error est itaque eveniet aperiam labore nesciunt vero
+              tenetur ipsum fuga distinctio at laboriosam consequuntur impedit
+              amet, nostrum laudantium officia!
+            </p>
+            <div class="slice">
+              <img src="./images/noun_forest_867264.svg" alt="" />
+            </div>
+          </article>
+          <article class="service">
+            <h3>Ochrona upraw leśnych</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+              a.
+            </p>
+            <div class="slice">
+              <img src="./images/noun_Fence_2483850.svg" alt="" />
+            </div>
+          </article>
+        </div>
       </section>
       <section id="about" class="about flow-content">
         <div>
