refacto html structure in about section

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
           </article>
         </div>
       </section>
-      <section id="about" class="about flow-content">
-        <div>
-          <h2>O nas</h2>
+      <section id="about" class="about">
+        <h2>O nas</h2>
+        <div class="about-wrapper">
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             Voluptatem, molestias suscipit tempore saepe, in veniam sed modi
@@ -95,8 +95,9 @@
             Voluptatem, sapiente reprehenderit, voluptas error nisi et dolore
             incidunt hic debitis delectus rem possimus non.
           </p>
+
+          <img src="images/harvester-min.jpg" alt="Harvester tnący drzewo" />
         </div>
-        <img src="images/harvester-min.jpg" alt="Harvester tnący drzewo" />
       </section>
     </div>
     <footer id="contact">
