add transition to sticky nav

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1>Kompleksowe usługi leśne na każdą kieszeń</h1>
     </header>
     <div class="wrapper">
-      <section id="services" class="services flow-content">
+      <section id="services" class="services">
         <h2>Nasze usługi</h2>
         <div class="services-wrapper">
           <article class="service">
