--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paweł Koptewicz - usługi leśne</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" /> -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
@@ -96,7 +96,7 @@
             incidunt hic debitis delectus rem possimus non.
           </p>
 
-          <img src="images/harvester-min.jpg" alt="Harvester tnący drzewo" />
+          <img src="images/harvester.jpg" alt="Harvester scinający drzewo" />
         </div>
       </section>
     </div>
