add lazy loading

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section id="services" class="services">
         <h2>Nasze usługi</h2>
         <div class="services-wrapper">
-          <article class="service">
+          <article class="service slide-in from-left">
             <h3>Pozyskanie drewna</h3>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio
@@ -38,10 +38,14 @@
               molestias debitis architecto aspernatur vero. Cumque.
             </p>
             <div class="slice">
-              <img src="./images/noun_Chainsaw_1265254.svg" alt="" />
+              <img
+                loading="lazy"
+                src="./images/noun_Chainsaw_1265254.svg"
+                alt=""
+              />
             </div>
           </article>
-          <article class="service">
+          <article class="service slide-in from-right">
             <h3>Zrywka drewna</h3>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -49,10 +53,14 @@
               facilis iure eveniet dolores!
             </p>
             <div class="slice">
-              <img src="./images/noun_tractor trailer_164432.svg" alt="" />
+              <img
+                loading="lazy"
+                src="./images/noun_tractor trailer_164432.svg"
+                alt=""
+              />
             </div>
           </article>
-          <article class="service">
+          <article class="service slide-in from-left">
             <h3>Zagospodarowanie lasu</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
@@ -63,17 +71,25 @@
               amet, nostrum laudantium officia!
             </p>
             <div class="slice">
-              <img src="./images/noun_forest_867264.svg" alt="" />
+              <img
+                loading="lazy"
+                src="./images/noun_forest_867264.svg"
+                alt=""
+              />
             </div>
           </article>
-          <article class="service">
+          <article class="service slide-in from-right">
             <h3>Ochrona upraw leśnych</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
               a.
             </p>
             <div class="slice">
-              <img src="./images/noun_Fence_2483850.svg" alt="" />
+              <img
+                loading="lazy"
+                src="./images/noun_Fence_2483850.svg"
+                alt=""
+              />
             </div>
           </article>
         </div>
@@ -96,7 +112,11 @@
             incidunt hic debitis delectus rem possimus non.
           </p>
 
-          <img src="images/harvester.jpg" alt="Harvester scinający drzewo" />
+          <img
+            loading="lazy"
+            src="images/harvester.jpg"
+            alt="Harvester scinający drzewo"
+          />
         </div>
       </section>
     </div>
